# flight-8-path

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  nodelets.xml  package.xml
.devcontainer/: Dockerfile  devcontainer.json
cli/: run.sh
launch/: start.launch
src/: eight_flier.cpp
tmux/: kill.sh  session.yml  start.sh
tmux/config/: custom_config.yaml  network_config.yaml  world_config.yaml
