<?xml version="1.0"?>
<package format="2">
  <name>flight-8-path</name>
  <version>0.0.0</version>
  <description>
    Package for the flight-8-path technical challenge at 4F4
  </description>

  <maintainer email="cychitivav@unal.edu.co">Cristian Chitiva</maintainer>

  <license>MIT</license>

  <!-- <url type="website">http://cristianchitiva.dev/flight-8-path</url> -->

  <author email="cychitivav@unal.edu.co">Cristian Chitiva</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>gazebo_ros</depend>
</package>