<?xml version="1.0"?>
<package format="2">
  <name>flight_8_path</name>
  <version>0.0.0</version>

  <description>
    Package for a technical challenge at 4F4, which consists of generating a figure-eight trajectory
    and following it with a drone.
  </description>
  <!-- <url type="website">http://cristianchitiva.dev/flight-8-path</url> -->

  <maintainer email="cychitivav@unal.edu.co">Cristian Chitiva</maintainer>
  <author email="cychitivav@unal.edu.co">Cristian Chitiva</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>gazebo_ros</depend>
  <depend>std_msgs</depend>
  <depend>nodelet</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>
</package>